--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,16 @@
       <artifactId>browscap-java</artifactId>
       <version>1.2.2</version>
     </dependency>
+    <dependency>
+      <groupId>javax.cache</groupId>
+      <artifactId>cache-api</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+      <version>3.5.2</version>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
