--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,20 @@
 <web-app
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://java.sun.com/xml/ns/javaee"
-        xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-        xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-        version="2.5">
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+        version="3.0">
+
   <display-name>Archetype Created Web Application</display-name>
+
+  <filter-mapping>
+    <filter-name>StaticResourceFilter</filter-name>
+    <url-pattern />
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>UserAgentFilter</filter-name>
+    <url-pattern />
+  </filter-mapping>
+
   <servlet>
     <servlet-name>DownloadBrowserServlet</servlet-name>
     <jsp-file>/WEB-INF/download_browser.jsp</jsp-file>
