--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
       <version>1.1</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.json</groupId>
+      <artifactId>javax.json-api</artifactId>
+      <version>1.1.2</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
