--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
       <version>5.2.12.Final</version>
     </dependency>
     <dependency>
+      <groupId>javax.ejb</groupId>
+      <artifactId>javax.ejb-api</artifactId>
+      <version>3.2</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
@@ -63,6 +68,14 @@
         <version>3.0.0</version>
         <configuration>
           <warSourceDirectory>src/main/webapp</warSourceDirectory>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-ejb-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <ejbVersion>3.2</ejbVersion>
         </configuration>
       </plugin>
     </plugins>
