--- a/credit-calculator/pom.xml
+++ b/credit-calculator/pom.xml
@@ -45,12 +45,15 @@
       <version>1.1</version>
     </dependency>
     <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-jersey-jaxrs</artifactId>
+      <version>1.5.19</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-
 </project>
