--- a/web-app/pom.xml
+++ b/web-app/pom.xml
@@ -160,6 +160,11 @@
       <artifactId>ehcache</artifactId>
       <version>3.5.2</version>
     </dependency>
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-jersey-jaxrs</artifactId>
+      <version>1.5.19</version>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
