--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.examples.pbk.otus.javaee</groupId>
-  <artifactId>hw9-rest</artifactId>
+  <artifactId>hw12-cdi</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>hw9-rest</name>
+  <name>hw12-cdi</name>
   <properties>
     <servlet.version>3.1.0</servlet.version>
     <hibernate.version>5.2.2.Final</hibernate.version>
@@ -82,12 +82,6 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>5.2.12.Final</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.weld.servlet</groupId>
-      <artifactId>weld-servlet</artifactId>
-      <version>2.4.4.Final</version>
-      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.json</groupId>
