--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,11 @@
       <artifactId>swagger-jersey-jaxrs</artifactId>
       <version>1.5.19</version>
     </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>2.0.1.Final</version>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
